# CFGProject

./: .gitignore  CMakeLists.txt  Interpreter.c  Interpreter.h  License.txt  README.md  Repl.c  Tests.c  Token.c  Token.h  example.itr  file.itr  main.c
